[package]
name = "eee"
version = "0.1.0"
edition = "2021"
description = "Hold Ctrl+Alt+Shift+E for 10 seconds to restart explorer.exe"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Registry",
]

[profile.release]
lto = true
strip = true
